// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept style prop 1`] = `
.emotion-0 {
  font-weight: bold;
  color: red;
}

<div>
  <span
    class="emotion-0"
  >
    This is red
  </span>
</div>
`;

exports[`should render correctly 1`] = `
<div>
  <span
    class="emotion-0"
  >
    Test 1
  </span>
</div>
`;

exports[`should render correctly 2`] = `
<div>
  <p
    class="emotion-0"
  >
    Test with p tag
  </p>
</div>
`;

exports[`should render correctly 3`] = `
.emotion-0 {
  font-weight: bold;
}

<div>
  <span
    class="emotion-0"
  >
    Test weight
  </span>
</div>
`;

exports[`should render correctly 4`] = `
.emotion-0 {
  font-size: 2rem;
}

<div>
  <span
    class="emotion-0"
  >
    Test size
  </span>
</div>
`;

exports[`should render correctly 5`] = `
.emotion-0 {
  color: #0A67D1;
}

<div>
  <span
    class="emotion-0"
  >
    Test color
  </span>
</div>
`;

exports[`should render correctly 6`] = `
.emotion-0 {
  font-style: italic;
}

<div>
  <span
    class="emotion-0"
  >
    Test italic
  </span>
</div>
`;
